search bar update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,16 +7,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div class="container">
         <div class="bar">
-            <i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>
+            <i class="fa-solid fa-location-dot fa-2x" style="color: #ffffff;"></i>
             <input type="text" placeholder="Enter location">
-            <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
+            <i class="fa-solid fa-magnifying-glass fa-2x" style="color: #ffffff;"></i>
         </div>
         <div class="notfound">
-            
+
         </div>
         <div class="result">
 
