notfound and result

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,40 @@
             <input type="text" placeholder="Enter location">
             <i class="fa-solid fa-magnifying-glass fa-2x" style="color: #ffffff;"></i>
         </div>
-        <div class="notfound">
-
+        <div class="notfound hide">
+            <img src="images/404.png" alt="">
+            <p>Sorry, we couldn't find the location!</p>
         </div>
         <div class="result">
-
+                <img src="images/clear.png" alt="">
+                <!-- <img src="images/cloud.png" alt="">
+                <img src="images/mist.png" alt="">
+                <img src="images/rain.png" alt="">
+                <img src="images/snow.png" alt=""> -->
+            <div class="restemp">
+                <p id="restemperature">25C</p>
+                <p>Sunny it seems</p>
+            </div>
+            <div class="reshnw">
+                <div class="humidity">
+                    <div class="hum1">
+                        <i class="fa-solid fa-water fa-2x" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="hum2">
+                        <p class="humper">27%</p>
+                        <p class="humtext">Humidity</p>
+                    </div>
+                </div>
+                <div class="humidity windspeed">
+                    <div class="hum1">
+                        <i class="fa-solid fa-wind fa-2x" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="hum2">
+                        <p class="humper">83kmph</p>
+                        <p class="humtext">Wind Speed</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
