--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,10 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-}
-
-.hide{
-    display: none;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -20,9 +17,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: rgba(0, 0, 0, 0.761);
     padding: 2rem;
     border-radius: 10px;
+    width: 23%;
 }
 
 input{
@@ -41,4 +40,73 @@ input::placeholder{
     color: rgb(191, 191, 191);
     font-size: 24px;
     font-weight: 500;
+}
+
+.notfound{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.notfound img{
+    margin: 2rem;
+}
+
+.notfound p{
+    font-size: 24px;
+}
+
+.result{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.result img{
+    width: 50%;
+}
+
+.restemp{
+    margin: 1rem;
+}
+
+.restemp p{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+#restemperature{
+    font-size: 60px;
+    font-weight: 600;
+}
+
+.reshnw{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.humidity{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem 2.8rem;
+}
+
+.humidity .hum1{
+    padding: 1rem;
+}
+
+.humidity .humper{
+    font-size: 25px;
+    font-weight: 600;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.hide{
+    display: none;
 }
