--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,7 +5,8 @@
 }
 
 body{
-    background-color: rgb(150, 150, 150);
+    background-image: url('../images/bgimg.jpg');
+    background-size: cover;
     color: white;
     height: 100vh;
     display: flex;
