--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
             <div class="notfound">
                 <img src="images/404.png" alt="">
                 <p><%= notfound %> </p>
-                <p>Sorry, we couldn't find the location!</p>
+                <p>Sorry, we couldn't find the location!!</p>
             </div>
         <% } %>
         <% if (locals.temp) { %>
